--- a/intro.html
+++ b/intro.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Welcome to your Jupyter Book &#8212; My sample book</title>
+<title>Ahya Cinta Azka Marinda</title>
 <style>
   body {
     font-family: Arial, sans-serif;
